<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <com.admiral.uikit.layout.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.admiral.uikit.components.appbar.Appbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.admiral.uikit.components.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x5"
            android:text="@string/buttons_title"
            app:admiralTextStyle="largetitle1" />

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnPrimaryButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x4"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">

            <com.admiral.uikit.components.cell.unit.TextCellUnit
                android:id="@+id/standardTabText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="leadingText"
                app:admiralText="@string/buttons_primary_title"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.cell.unit.IconCellUnit
                android:id="@+id/standardTabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />
        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnSecondaryButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">

            <com.admiral.uikit.components.cell.unit.TextCellUnit
                android:id="@+id/logoTabText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="leadingText"
                app:admiralText="@string/buttons_secondary_title"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.cell.unit.IconCellUnit
                android:id="@+id/logoTabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />
        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnGhostButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">

            <com.admiral.uikit.components.cell.unit.TextCellUnit
                android:id="@+id/informerTabText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="leadingText"
                app:admiralText="@string/buttons_ghost_title"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.cell.unit.IconCellUnit
                android:id="@+id/informerTabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />
        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnRules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">

            <com.admiral.uikit.components.cell.unit.TextCellUnit
                android:id="@+id/outlineTabText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="leadingText"
                app:admiralText="@string/buttons_rules"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.cell.unit.IconCellUnit
                android:id="@+id/outlineTabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />
        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnOtherButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">

            <com.admiral.uikit.components.cell.unit.TextCellUnit
                android:id="@+id/underlineTabText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="leadingText"
                app:admiralText="@string/buttons_other_title"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.cell.unit.IconCellUnit
                android:id="@+id/underlineTabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />
        </com.admiral.uikit.components.cell.BaseCell>
    </com.admiral.uikit.layout.LinearLayout>
</ScrollView>
